[metadata]
name = apt
version = 0.0.3
author = Riley Ferguson
author_email = riferg206@gmail.com
description = A handy little package for facilitating integration tests in AWS-hosted environments. Senshuu!
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3

[options]
include_package_data = True
zip_safe = False
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.9
install_requires =
    boto3
    yaspin

[options.packages.find]
where=src

[options.package_data]
* = *.ini